force-app/main/default/objects/Sampling_Inspection_Argentina__c/Sampling_Inspection_Argentina__c.object-meta.xml
<CustomObject>
    <description>阿根廷第三方巡店员巡除海信外其他品牌使用（2024年12月已无其他品牌巡店员，该表停止使用）</description>
    <label>Sampling Inspection Argentina</label>
    <nameField>
        <displayFormat>SIA-{YYYY}{MM}{0000}</displayFormat>
        <label>Sampling Inspection Argentina Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sampling Inspection Argentina</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>