force-app/main/default/objects/Sampling_Inspection_Argentina__c/fields/Daily_Inspection_Report__c.field-meta.xml
<CustomField>
    <fullName>Daily_Inspection_Report__c</fullName>
    <label>Daily Inspection Report</label>
    <referenceTo>Daily_Inspection_Report__c</referenceTo>
    <relationshipLabel>Sampling Inspection Argentina</relationshipLabel>
    <relationshipName>Sampling_Inspection_Argentina</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>