force-app/main/default/objects/Sampling_Inspection_Argentina__c/fields/POP__c.field-meta.xml
<CustomField>
    <fullName>POP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>POP</label>
    <type>Checkbox</type>
</CustomField>