force-app/main/default/objects/Sampling_Inspection_Argentina__c/fields/ReRe__c.field-meta.xml
<CustomField>
    <fullName>ReRe__c</fullName>
    <label>Sampling Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>